--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -32,7 +32,7 @@
     <body>
         <header> </header>
         <footer>
-            <p>Holberton School</p>
+            <p>Alx Africa</p>
         </footer>
     </body>
 </html>
