--- a/web_static/101-index.html
+++ b/web_static/101-index.html
@@ -24,11 +24,11 @@
                     States
                 </h3>
                 <h4>
-                    California, Arizona...
+                    Abuja, Gwarinpa...
                 </h4>
                 <ul class="popover">
                     <li>
-                        <h2>Arizona:</h2>
+                        <h2>Gwarinpa:</h2>
                     </li>
                     <li>
                         <ul>
@@ -37,11 +37,11 @@
                         </ul>
                     </li>
                     <li>
-                        <h2>California:</h2>
+                        <h2>Gwarinpa:</h2>
                     </li>
                     <li>
                         <ul>
-                            <li>San Francisco</li>
+                            <li>San Fracisco</li>
                             <li>Los Altos</li>
                         </ul>
                     </li>
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 <div class="user">
-                    <b>Owner:</b> Johnny
+                    <b>Owner:</b> John
                 </div>
                 <div class="description">
                     <p> This is a lovely 1 bedroom and 1 bathroom apartment that
@@ -131,7 +131,7 @@
                     </div>
                 </div>
                 <div class="user">
-                    <b>Owner:</b> Adrienne
+                    <b>Owner:</b> Azeez
                 </div>
                 <div class="description">
                     <p> Our place is a private, affordable stand-alone guest
@@ -186,7 +186,7 @@
                     </div>
                 </div>
                 <div class="user">
-                    <b>Owner:</b> Lue
+                    <b>Owner:</b> Taofeek
                 </div>
                 <div class="description">
                     <p> This is a premium quality room located in the
@@ -226,7 +226,7 @@
         </section>
     </div>
     <footer>
-        <p>Holberton School</p>
+        <p>Alx Africa</p>
     </footer>
 </body>
 
