--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -20,7 +20,7 @@
             </section>
         </div>
         <footer>
-            <p>Holberton School</p>
+            <p>Alx Africa</p>
         </footer>
     </body>
 </html>
