--- a/web_static/102-index.html
+++ b/web_static/102-index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <title>AirBnB clone</title>
-    <link rel="stylesheet" type="text/css" href="styles/4-common.css" />
-    <link rel="stylesheet" type="text/css" href="styles/3-header.css" />
-    <link rel="stylesheet" type="text/css" href="styles/3-footer.css" />
-    <link rel="stylesheet" type="text/css" href="styles/6-filters.css" />
-    <link rel="stylesheet" type="text/css" href="styles/100-places.css" />
+    <link rel="stylesheet" type="text/css" href="styles/102-common.css" />
+    <link rel="stylesheet" type="text/css" href="styles/102-header.css" />
+    <link rel="stylesheet" type="text/css" href="styles/102-footer.css" />
+    <link rel="stylesheet" type="text/css" href="styles/102-filters.css" />
+    <link rel="stylesheet" type="text/css" href="styles/102-places.css" />
     <link rel='shortcut icon' href="../images/icon.png" />
 </head>
 
@@ -24,11 +24,11 @@
                     States
                 </h3>
                 <h4>
-                    California, Arizona...
+                    Lagos, banana island...
                 </h4>
                 <ul class="popover">
                     <li>
-                        <h2>Arizona:</h2>
+                        <h2>lekki:</h2>
                     </li>
                     <li>
                         <ul>
@@ -37,12 +37,12 @@
                         </ul>
                     </li>
                     <li>
-                        <h2>California:</h2>
+                        <h2>Aswan:</h2>
                     </li>
                     <li>
                         <ul>
-                            <li>San Francisco</li>
-                            <li>Los Altos</li>
+                            <li>Eqypt</li>
+                            <li>cairo</li>
                         </ul>
                     </li>
                 </ul>
@@ -131,7 +131,7 @@
                     </div>
                 </div>
                 <div class="user">
-                    <b>Owner:</b> Segun
+                    <b>Owner:</b> azeez
                 </div>
                 <div class="description">
                     <p> Our place is a private, affordable stand-alone guest
@@ -154,7 +154,7 @@
                         <h2>1 Reviews</h2>
                         <ul>
                             <li>
-                                <h3>From Max the 15th January 2017</h3>
+                                <h3>From taiwo the 15th January 2017</h3>
                                 <p>
                                     Fantastic place. It was clean, Adrienne was great (even
                                     though we did not meet in person) and everything went super
@@ -186,7 +186,7 @@
                     </div>
                 </div>
                 <div class="user">
-                    <b>Owner:</b> Lawal
+                    <b>Owner:</b> Lue
                 </div>
                 <div class="description">
                     <p> This is a premium quality room located in the
@@ -208,15 +208,15 @@
                         <h2>3 Reviews</h2>
                         <ul>
                             <li>
-                                <h3>From Kamie Nean the 6th September 2017</h3>
+                                <h3>From ibrahim the 6th September 2017</h3>
                                 <p>I felt like a Queen during my stay!</p>
                             </li>
                             <li>
-                                <h3>From Heman the 5th October 2017</h3>
+                                <h3>From isak the 5th October 2017</h3>
                                 <p>Beautiful Place.</p>
                             </li>
                             <li>
-                                <h3>From Numa the 15th August 2017</h3>
+                                <h3>From fikir the 15th August 2017</h3>
                                 <p>Great view and service!</p>
                             </li>
                         </ul>
