--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -10,7 +10,7 @@
     <body>
         <header> </header>
         <footer>
-            <p>Holberton School</p>
+            <p>Alx Africa</p>
         </footer>
     </body>
 </html>
