--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -13,7 +13,7 @@
         <div class="container">
         </div>
         <footer>
-            <p>Holberton School</p>
+            <p>Alx Africa</p>
         </footer>
     </body>
 </html>
