--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -35,7 +35,7 @@
             </section>
         </div>
         <footer>
-            <p>Holberton School</p>
+            <p>Alx Africa</p>
         </footer>
     </body>
 </html>
