--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -62,7 +62,7 @@
             </section>
         </div>
         <footer>
-            <p>Holberton School</p>
+            <p>Alx Africa</p>
         </footer>
     </body>
 </html>
