--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -22,11 +22,11 @@
                         States
                     </h3>
                     <h4>
-                        California, Arizona...
+                        Lagos, Ikoyi...
                     </h4>
                     <ul class="popover">
                             <li>
-                                <h2>Arizona:</h2>
+                                <h2>Ikoyi:</h2>
                             </li>
                             <li>
                                 <ul>
@@ -35,7 +35,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <h2>California:</h2>
+                                <h2>Lagos:</h2>
                             </li>
                             <li>
                                 <ul>
@@ -75,7 +75,7 @@
             </section>
         </div>
         <footer>
-            <p>Holberton School</p>
+            <p>Alx Africa</p>
         </footer>
     </body>
 </html>
