--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -22,11 +22,11 @@
                         States
                     </h3>
                     <h4>
-                        California, Arizona...
+                        Lagos, osapa london...
                     </h4>
                     <ul class="popover">
                             <li>
-                                <h2>Arizona:</h2>
+                                <h2>osapa london:</h2>
                             </li>
                             <li>
                                 <ul>
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                     <div class="user">
-                        <b>Owner:</b> Johnny
+                        <b>Owner:</b> John
                     </div>
                     <div class="description">
                         <p> This is a lovely 1 bedroom and 1 bathroom apartment that
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                     <div class="user">
-                        <b>Owner:</b> Adrienne
+                        <b>Owner:</b> Ibrahim
                     </div>
                     <div class="description">
                         <p> Our place is a private, affordable stand-alone guest 
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                     <div class="user">
-                        <b>Owner:</b> Lue
+                        <b>Owner:</b> Fikri
                     </div>
                     <div class="description">
                         <p> This is a premium quality room located in the 
@@ -154,7 +154,7 @@
             </section>
         </div>
         <footer>
-            <p>Holberton School</p>
+            <p>Alx Africa</p>
         </footer>
     </body>
 </html>
