--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -16,7 +16,7 @@
                         justify-content: center; 
                         align-items: center;
                         bottom: 0">
-            <p>Alx Africa</p>
+            <p>Best School</p>
         </footer>
     </body>
 </html>
